# bclient

CxImage/LoadImage/: LoadImage.sln
FreeImage/FreeImageUtils/: FreeImageUtils.sln
GDI/Dialog/: Dialog.sln
GDI/First/: First.sln
GDI/Label/: Label.sln
GDI/List/: List.sln
GDI/PicHelper/: PicHelper.sln
MFC/CTEIConfig/: CTEIConfig.cpp  CTEIConfig.h  CTEIConfig.rc  CTEIConfig.sln  CTEIConfig.vcxproj  CTEIConfig.vcxproj.filters  CTEIConfigDlg.cpp  CTEIConfigDlg.h  resource.h  stdafx.cpp
MFC/MFCEvent/: MFCEvent.sln
MFC/MFCFirst/: MFCFirst.sln
MFC/TrayMenu/: TrayMenu.cpp  TrayMenu.h  TrayMenu.rc  TrayMenu.sln  TrayMenu.vcxproj  TrayMenu.vcxproj.filters  TrayMenuDlg.cpp  TrayMenuDlg.h  resource.h  stdafx.cpp
OpenCV/Convert/: Convert.sln
OpenCV/DrawText/: DrawText.sln
QT/: QT控件.docx
QT/Animation/: Animation.pro  AnimationGroup.cpp  EasingCurve.cpp  MachineState.cpp  mainwindow.cpp  mainwindow.h
QT/Event/: CMakeLists.txt  Event.pro  MainWindow.cpp  MainWindow.h  QEventLabel.cpp  QEventLabel.h  UILabel.cpp  UILabel.h  widget.cpp  widget.h
QT/MainWindow/: mainwindow.cpp  mainwindow.h
QT/Movie/: mainwindow.cpp  mainwindow.h
QT/QComboBox/: mainwindow.cpp  mainwindow.h  untitled.pro  untitled.pro.user.7e824d4
QT/QDate/: QDate.cpp  QDate.pro  QDateTime.cpp  QTime.cpp  widget.cpp  widget.h
QT/QDesigner/: QDesigner.pro  main2.cpp  widget.cpp  widget.h  widget.ui
QT/QDesktopWidget/: widget.cpp  widget.h
QT/QDialog/: ColorDia.cpp  FontDia.cpp  InputDia.cpp  MyDiaglog.h  MyDialog.cpp  QDialog.pro  widget.cpp  (+3 more)
doc/: 20221024.txt
flutter/: .gitignore
(+702 files in other folders)
